<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#505DB3"
    android:orientation="vertical"
    tools:context=".Profilo.Settings">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/sfondoarrow"
        android:clickable="true"
        app:srcCompat="@drawable/backarrow"
        app:tint="#673AB7" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:padding="15dp"
        android:text="@string/modifica_profilo"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/custom_editext"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="0dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/textshape"
            android:backgroundTint="#194F588F"
            android:drawableEnd="@drawable/pencil"
            android:fontFamily="@font/poppins"
            android:gravity="top|center"
            android:padding="7dp"
            android:hint="@string/nome"
            android:textAlignment="viewStart"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editSurname"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/textshape"
            android:backgroundTint="#194F588F"
            android:drawableEnd="@drawable/pencil"
            android:fontFamily="@font/poppins"
            android:padding="7dp"
            android:hint="@string/cognome"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/textshape"
            android:backgroundTint="#194F588F"
            android:drawableEnd="@drawable/pencil"
            android:ems="10"
            android:maxLength="15"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="7dp"
            tools:text="Password" />

        <EditText
            android:id="@+id/editIndirizzo"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/textshape"
            android:backgroundTint="#194F588F"
            android:drawableEnd="@drawable/pencil"
            android:fontFamily="@font/poppins"
            android:padding="7dp"
            android:hint="@string/indirizzo"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editCitta"
                android:layout_width="220dp"
                android:layout_height="match_parent"
                android:background="@drawable/textshape"
                android:backgroundTint="#194F588F"
                android:drawableEnd="@drawable/pencil"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:hint="@string/città"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editCap"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:background="@drawable/textshape"
                android:backgroundTint="#194F588F"
                android:drawableEnd="@drawable/pencil"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:ems="5"
                android:maxLength="5"
                android:inputType="number"
                android:hint="@string/cap"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/textshape"
            android:backgroundTint="#194F588F"
            android:drawableEnd="@drawable/pencil"
            android:fontFamily="@font/poppins"
            android:padding="7dp"
            android:maxEms="10"
            android:maxLength="10"

            android:inputType="number"
            android:hint="@string/telefono"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/salvaButton"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins"
        android:gravity="center|center_vertical"
        android:paddingLeft="7dp"
        android:paddingTop="7dp"
        android:paddingRight="7dp"
        android:text="@string/salva"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"

        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"

        app:rippleColor="@color/white" />

</LinearLayout>

