<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_gradiente"
    tools:context=".Ricerca.FatturaAvvenutaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/custom_editext">

        <TextView
            android:id="@+id/textView4"
            android:gravity="center"
            android:shadowColor="#611FB1"
            android:shadowRadius="20"
            android:fontFamily="@font/poppins"
            android:textSize="40dp"
            android:textColor="#1F2881"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CORSA CONCLUSA" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView5"
                android:layout_margin="16dp"
                android:gravity="center"
                android:fontFamily="@font/poppins"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prezzo_fin" />
            <TextView
                android:id="@+id/prezzo"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textSize="34sp"
                android:background="@drawable/contorno"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="33"
                android:padding="10dp"
                android:drawablePadding="10dp"

                android:drawableEnd="@drawable/eurosymbol"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView0"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_height="wrap_content"
                android:text="@string/durata" />
            <TextView
                android:id="@+id/durata"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins"

                android:gravity="center"
android:background="@drawable/contorno"
                android:padding="10dp"
                android:textSize="34sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 ore" />
        </LinearLayout>
        <RatingBar
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:clickable="true"
            android:progressTint="@color/purple_500"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/segnalazione"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="left"
            android:ems="10"
            android:background="@drawable/contorno"
            android:layout_margin="40dp"
            android:inputType="text"
            android:hint="segnalazione"
            android:paddingTop="6sp"
            android:paddingStart="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="80dp"
            android:id="@+id/chiudi"
            android:fontFamily="@font/poppins"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:background="@drawable/button_background"
            android:text="@string/chiudi">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>



</FrameLayout>